US643 - Added UTs for error scenario. Fixed version in soa page and audit trial page. Added tooltip and red color for duplicate entries. Increased the scrollbar width. Changed disabled button color to grey.

--- a/SDR-WebApp/src/app/features/soa/soa.component.scss
+++ b/SDR-WebApp/src/app/features/soa/soa.component.scss
@@ -93,3 +93,14 @@
   margin-top: 80px;
   font-weight: 500;
 }
+
+.no-workflows-container {
+  text-align: center;
+  font-weight: 500;
+  margin: 10px;
+}
+
+.duplicate {
+  color: red;
+  cursor: pointer;
+}
