--- a/SDR-WebApp/src/app/shared/components/study-element-description/study-element-description.component.scss
+++ b/SDR-WebApp/src/app/shared/components/study-element-description/study-element-description.component.scss
@@ -101,10 +101,6 @@ h2 {
   top: -28px;
 }
 
-.soaButton[disabled] {
-  opacity: 0.65;
-}
-
 .buttonDiv {
   position: relative;
 }
